[metadata]
name = tcpcan
version = 0.0.2
author = Simon Tegelid
author_email = simon.tegelid@niradynamics.se
description = A socketCAN on TCP client/server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/simontegelid/tcpcan
project_urls =
    Bug Tracker = https://github.com/simontegelid/tcpcan/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tcpcan = tcpcan:main
